--- a/DSA-Python-Cap08-02-Pandas.ipynb
+++ b/DSA-Python-Cap08-02-Pandas.ipynb
@@ -1494,23 +1494,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "int() argument must be a string, a bytes-like object or a number, not 'DataFrame'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-71-0844631aaef7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe2\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'DataFrame'"
-     ]
+     "data": {
+      "text/plain": [
+       "um        True\n",
+       "dois      True\n",
+       "três      True\n",
+       "quatro    True\n",
+       "cinco     True\n",
+       "Name: Ano, dtype: bool"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "int(frame2) >5"
+    "frame2['Ano'] >5"
    ]
   },
   {
@@ -34376,7 +34380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34386,16 +34390,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "      <th>d</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Name</td>\n",
+       "      <td>Position Title</td>\n",
+       "      <td>Department</td>\n",
+       "      <td>Employee Annual Salary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  ELVIA J</td>\n",
+       "      <td>WATER RATE TAKER</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>$88968.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>$80778.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>$80778.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>$84780.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32178</th>\n",
+       "      <td>ZYGOWICZ,  PETER J</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>$86520.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32179</th>\n",
+       "      <td>ZYMANTAS,  MARK E</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>$83616.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32180</th>\n",
+       "      <td>ZYRKOWSKI,  CARLO E</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>$86520.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32181</th>\n",
+       "      <td>ZYSKOWSKI,  DARIUSZ</td>\n",
+       "      <td>CHIEF DATA BASE ANALYST</td>\n",
+       "      <td>DoIT</td>\n",
+       "      <td>$110352.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32182</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32183 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         a                         b                 c  \\\n",
+       "0                     Name            Position Title        Department   \n",
+       "1          AARON,  ELVIA J          WATER RATE TAKER       WATER MGMNT   \n",
+       "2        AARON,  JEFFERY M            POLICE OFFICER            POLICE   \n",
+       "3           AARON,  KARINA            POLICE OFFICER            POLICE   \n",
+       "4      AARON,  KIMBERLEI R  CHIEF CONTRACT EXPEDITER  GENERAL SERVICES   \n",
+       "...                    ...                       ...               ...   \n",
+       "32178   ZYGOWICZ,  PETER J            POLICE OFFICER            POLICE   \n",
+       "32179    ZYMANTAS,  MARK E            POLICE OFFICER            POLICE   \n",
+       "32180  ZYRKOWSKI,  CARLO E            POLICE OFFICER            POLICE   \n",
+       "32181  ZYSKOWSKI,  DARIUSZ   CHIEF DATA BASE ANALYST              DoIT   \n",
+       "32182                  NaN                       NaN               NaN   \n",
+       "\n",
+       "                            d  \n",
+       "0      Employee Annual Salary  \n",
+       "1                   $88968.00  \n",
+       "2                   $80778.00  \n",
+       "3                   $80778.00  \n",
+       "4                   $84780.00  \n",
+       "...                       ...  \n",
+       "32178               $86520.00  \n",
+       "32179               $83616.00  \n",
+       "32180               $86520.00  \n",
+       "32181              $110352.00  \n",
+       "32182                     NaN  \n",
+       "\n",
+       "[32183 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34404,7 +34553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
